Fix error UI icon layout spacing

--- a/client/web/src/enterprise/insights/components/insights-view-grid/components/backend-insight/components/backend-insight-chart/BackendInsightChart.module.scss
+++ b/client/web/src/enterprise/insights/components/insights-view-grid/components/backend-insight/components/backend-insight-chart/BackendInsightChart.module.scss
@@ -120,3 +120,7 @@
     height: 100%;
     z-index: 1;
 }
+
+.legend-incomplete-alert {
+    padding-left: 0;
+}
